	use s// instead.

	* test/act/time.d: Use the same format for date(1) output as
	printf ("%Y") does.
	* test/act/time.r.p: New postprocessor, detect and mark
	identical walltimestamp and date output.
	* test/act/time.r: New, postprocessed results.

	* test/script/syscall.r: Fake results to ensure that result
	comparison fails (this test is known to fail right now).

	* test/vars/clause.d: Strip out pointless linefeeds.
	* test/vars/clause.r: Expected results.
	* test/vars/clause.t: New (fake) trigger, /bin/true as this D
	script runs on its own.
	* test/act/time.t: Likewise.

2011-09-09  Shujing Zhao  <pearly.zhao@oracle.com>

	* test/script/tracewrite.d: Adjust: fix copyright date, assign
	trigger.
	* test/script/tracewrite.r: Expected results.

	* test/intro/rwtime.d: Adjust: fix copyright date, assign trigger.
	* test/intro/rwtime.r.p: Expected-results postprocessor.
	* test/intro/rwtime.r: Expected results.

2011-09-08  Nick Alcock  <nick.alcock@oracle.com>

	* test/struct/rwinfo.d: Adjust: fix copyright date, assign
	trigger, report if elapsed time >0ns rather than emitting the
	(highly variable) actual time.
	* test/struct/rwinfo.r: Expected results.

	* test/triggers/readwholedir.c: New trigger, read all .d files in
	the trigger directory in consistent order using chunks as close to
	4Kb as possible, and write them to a temporary file in chunks of
	the same size.
	* test/triggers/Build (TRIGGERS): Build it.

	* test/triggers/testprobe.c: Add CDDL header.

2011-09-08  Nick Alcock  <nick.alcock@oracle.com>

	* cmd/dtrace.c: New -t switch, turning off CPU and ID output for
	reproducible test results.
	(usage): Document it.
	(chew): Use it.
	(main): Set it.  Mark options with + rather than contaminating
	child environments with POSIXLY_CORRECT.

	* runtest.sh: Use it.  Rip out the awk-based results
	postprocessor.  Always use the C collation locale.  Ensure that we
	kill dtrace and trigger processes on SIGINT. $_pid is now the